# data-quality-fw

./: README.md  pyproject.toml  schema_crm.py
app/: etl.py  etl_infer_schema.py  funcao.py  schema.py
docs/: index.md
tests/: test_func_etl.py  test_funcao_hello_world.py
